# Imperial-C-Exam-Solutions

./: README.md
ann/: README.md  ann.c  rdata  rdata.c  train  train.c
ann/skeleton/: ann.c  ann.h  layer.c  layer.h  makefile  rdata.c
ann/solution/: CMakeLists.txt  layer.c
doublets/: CMakeLists.txt  README.md  dictionary  doublets  doublets.c  doublets.h  doublets_tests.c  main.c  testA  testB  trie.c  trie_tests.c
doublets/include/: doublets.h  tests.h  trie.h
doublets/skeleton/: Makefile  doublets.c  testB.c  trie.c  trie.h  words.txt
doublets/solution/: CMakeLists.txt  testA.c  trie.c
eliza/: CMakeLists.txt  Makefile  README.md  eliza  error_codes.h  list.c  map.c  parser.c  script  string_utils.c  string_utils.h
eliza/skeleton/: Makefile  eliza.c  eliza_state.c  fwd.h  map.c  map.h  parser.h  rule.c  rule.h  string_utils.c
eliza/solution/: CMakeLists.txt  eliza_state.h  list.h  rule.c
heapsort/: README.md
heapsort/PartI/: CMakeLists.txt  binaryheap.c  heapsort
heapsort/PartII/: CMakeLists.txt  Makefile  program  program.c
heapsort/skeleton/PartI/: Makefile  binaryheap.c  heapsort.c
heapsort/skeleton/PartII/: program.c
heapsort/solution/PartI/: CMakeLists.txt  binaryheap.h  heapsort.c
heapsort/solution/PartII/: CMakeLists.txt
heighway_dragons/: README.md
heighway_dragons/skeleton/PartI/: dragon.c  makefile
heighway_dragons/skeleton/PartII/: program.c
heighway_dragons/solution/PartI/: CMakeLists.txt  dragon.h  image.c  image.h
heighway_dragons/solution/PartII/: CMakeLists.txt
heighwaydrgaon/PartI/: CMakeLists.txt  dragon  dragon.c
heighwaydrgaon/PartII/: CMakeLists.txt  makefile  program  program.c
heighwaydrgaon/images/: heighwaydragon.pgm  twindragon.pgm
heighwaydrgaon/output/: PartI.txt  PartII.txt  jurassicdragon.pgm
huffman/: CMakeLists.txt  Makefile  exam.c  main
huffman_coding/: README.md
huffman_coding/skeleton/: exam.c  exam.h  main.c
huffman_coding/solution/: CMakeLists.txt
region/images/: input2.pgm  input5.pgm
region/skeleton/: CMakeLists.txt  Makefile  check_list_functions  check_list_functions.c  list.c  regions
region_detection/: README.md
region_detection/skeleton/images/: input1.pgm  input3.pgm  input4.pgm
region_detection/skeleton/main/: Makefile  list.c  list.h  main.c  region.c  region.h  test_regions.h  typedefs.h
region_detection/skeleton/reference_outputs/: output1.pgm  output2.pgm  output5.pgm  regions1.txt  regions2.txt
region_detection/solution/images/: input6.pgm  input7.pgm
region_detection/solution/main/: image.c  image.h  region.c
region_detection/solution/reference_outputs/: output7.pgm  regions5.txt  regions7.txt
